# ai-infra-research-dashboard

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md
apps/api/: Dockerfile  celerybeat-schedule  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a3f8b2c4d1e5_add_user_and_refresh_token_tables.py  b1c2d3e4f5a6_add_domain_entities.py  c2d3e4f5a6b7_add_research_notes.py  d3e4f5a6b7c8_add_metrics.py  e4f5a6b7c8d9_add_ingestion.py  f5a6b7c8d9e0_add_search_indexes.py  g6b7c8d9e0f1_add_user_invites.py  h7c8d9e0f1g2_add_password_reset_tokens.py
apps/api/scripts/: seed.py
apps/api/src/api/: logging_config.py  main.py  middleware.py  settings.py
apps/api/src/api/auth/: dependencies.py  hashing.py  jwt.py
apps/api/src/api/db/: engine.py  session.py
apps/api/src/api/models/: __init__.py  company.py  datacenter_site.py  hardware_product.py  metric.py  password_reset_token.py  refresh_token.py  research_note.py  source_document.py  user.py  user_invite.py
apps/api/src/api/repositories/: company.py  datacenter.py  hardware_product.py  ingestion.py  metric.py  note.py  search.py  user.py
apps/api/src/api/routes/: audit.py  auth.py  companies.py  datacenters.py  hardware_products.py  health.py  ingestion.py  metrics.py  notes.py  published.py  search.py  sources.py  system.py  users.py  (+1 more)
apps/api/tests/: conftest.py  test_auth.py  test_companies.py  test_datacenters.py  test_hardware_products.py  test_health.py  test_ingestion.py  test_metrics.py  test_notes.py  test_search.py  test_system.py  test_users.py
(+113 files in other folders)
